# flagrantBackend

./: .gitignore  README.md  foo.py  lambda.yaml  lambda_function.py  pyproject.toml
terraform/: execution_policy.json  main.tf  terraform.tf
